# simple-deployable-calc

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  logging_config.py  main.py  security.py
app/api_routes/: calculations.py
app/api_schemas/: calculations.py
app/business_logic/: calculator.py
app/data_access/: calculation_repository.py
app/db_models/: calculation.py
tests/: test_calculations_api.py  test_calculator.py
